# compass

./: .codeclimate.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .style.yapf  CHANGELOG.md  CMakeLists.txt  CMake_cmd.sh  CONTRIBUTING.md  GH-actions.txt  INSTALL.md  Jenkinsfile  LICENSE  Makefile  Makefile.inc  Makefile.yorick  Project.ede  README  README.md  README.yorick  analyze_code_quality_report.py  check_var.sh  cleanup_src  compass.cbp  compass.layout  compile.py  compile.sh  compile_conan.py  compile_vcpkg.py  conanfile.py  configure  configure.sh  cpp-pre-commit.sh  custom_install.md  define_var.sh  environment.yml  generate_coverage.sh  generate_reports.sh  get_config.sh  (+25 more)
libcarma/: .gitignore  CMakeLists.txt  Makefile  carma.pc.in  libcarma.pc.in
libcarma/Release/: makefile  sources.mk
libcarma/include/: carma.hpp  carma_context.hpp  carma_cublas.hpp  carma_cusolver.hpp  carma_cusparse.hpp  carma_exception.hpp  carma_fft.hpp  carma_host_obj.hpp  carma_ipcs.hpp  carma_magma.hpp  carma_multithread.hpp  carma_obj.hpp  carma_sparse_host_obj.hpp  carma_sparse_obj.hpp  carma_streams.hpp  carma_timer.hpp  carma_utils.hpp  convolutionFFT2D_common.hpp  type_list.hpp
libcarma/include.cuh/: carma_utils.cuh  convolutionFFT2D.cuh
libcarma/include.h/: carma.h  carma_context.h  carma_cublas.h  carma_cula.h  carma_cusolver.h  carma_cusparse.h  carma_exception.h  carma_fft.h  carma_host_obj.h  carma_indicators.hpp  carma_ipcs.h  carma_magma.h  carma_multithread.h  carma_obj.h  carma_parse_obj.h  carma_sparse_host_obj.h  carma_sparse_obj.h  carma_streams.h  carma_timer.h  carma_utils.h  convolutionFFT2D_common.h  type_list.hpp
libcarma/magma_make.inc/: make.inc.atlas.hippo  make.inc.mkl.hippo
libcarma/magma_patch/: Makefile.patch  clatrd.cpp.patch  make.inc.atlas.hippo  zlatrd.cpp.patch
libcarma/python_module/: CMakeLists.txt
libcarma/scripts/: get_cuda_sm.sh
libcarma/src.cpp/: carma_context.cpp  carma_cublas.cpp  carma_cudpp.cpp  carma_cula.cpp  carma_cusolver.cpp  carma_cusparse.cpp  carma_fft.cpp  carma_fft_conv.cpp  carma_host_obj.cpp  carma_ipcs.cpp  carma_ksparse.cpp  carma_magma.cpp  carma_multithread.cpp  carma_obj.cpp  carma_parse_obj.cpp  carma_rng.cpp  carma_sparse_host_obj.cpp  carma_sparse_obj.cpp  carma_streams.cpp  carma_utils.cpp  idx_test.c
libcarma/src.cu/: carma_fft_conv.cu  carma_obj.cu  carma_rng.cu  carma_sum.cu  carma_svd.cu  carma_timer.cu  carma_transpose.cu  carma_utils.cu  convolutionFFT2D.cu
libsutra/: CMakeLists.txt  Makefile  Makefile~  libsutra.pc.in  sutra.pc.in
libsutra/include/: sutra.hpp  sutra_acquisim.hpp  sutra_atmos.hpp  sutra_centroider.hpp  sutra_centroider_bpcog.hpp  sutra_centroider_cog.hpp  sutra_centroider_corr.hpp  sutra_centroider_maskedPix.hpp  sutra_centroider_pyr.hpp  sutra_centroider_tcog.hpp  sutra_centroider_wcog.hpp  sutra_controller.hpp  sutra_controller_cured.hpp  sutra_controller_generic.hpp  sutra_controller_generic_linear.hpp  sutra_controller_geo.hpp  sutra_controller_ls.hpp  sutra_controller_mv.hpp  sutra_controller_utils.hpp  sutra_coronagraph.hpp  sutra_dm.hpp  sutra_gamora.hpp  sutra_groot.hpp  sutra_kl.hpp  sutra_lgs.hpp  sutra_perfectCoronagraph.hpp  sutra_phase.hpp  sutra_roket.hpp  sutra_rtc.hpp  sutra_rtc_brahma.hpp  sutra_rtc_brahmaListenerImpl.hpp  sutra_rtc_cacao.hpp  sutra_sensors.hpp  sutra_source.hpp  sutra_stellarCoronagraph.hpp  sutra_target.hpp  sutra_target_brahma.hpp  sutra_target_brahmaListenerImpl.hpp  sutra_telemetry.hpp  sutra_telescope.hpp  (+7 more)
libsutra/include.h/: cured.h  sutra.h  sutra_acquisim.h  sutra_ao_utils.h  sutra_aotemplate.h  sutra_atmos.h  sutra_centroider.h  sutra_centroider_bpcog.h  sutra_centroider_cog.h  sutra_centroider_corr.h  sutra_centroider_maskedPix.h  sutra_centroider_pyr.h  sutra_centroider_roof.h  sutra_centroider_tcog.h  sutra_centroider_wcog.h  sutra_controler.h  sutra_controller.h  sutra_controller_cured.h  sutra_controller_generic.h  sutra_controller_generic_linear.h  sutra_controller_geo.h  sutra_controller_kalman.h  sutra_controller_ls.h  sutra_controller_mv.h  sutra_controller_utils.h  sutra_coronagraph.h  sutra_dm.h  sutra_gamora.h  sutra_groot.h  sutra_kl.h  sutra_lgs.h  sutra_perfectCoronagraph.h  sutra_phase.h  sutra_psfrecs.h  sutra_roket.h  sutra_rtc.h  sutra_rtc_brahma.h  sutra_rtc_brahmaListenerImpl.h  sutra_rtc_brama.h  sutra_rtc_bramaListenerImpl.h  (+22 more)
libsutra/python_module/: CMakeLists.txt
libsutra/src.cpp/: cured.cpp  sutra_acquisim.cpp  sutra_aotemplate.cpp  sutra_atmos.cpp  sutra_centroider.cpp  sutra_centroider_bpcog.cpp  sutra_centroider_cog.cpp  sutra_centroider_corr.cpp  sutra_centroider_maskedPix.cpp  sutra_centroider_pyr.cpp  sutra_centroider_roof.cpp  sutra_centroider_tcog.cpp  sutra_centroider_wcog.cpp  sutra_controler.cpp  sutra_controller.cpp  sutra_controller_cured.cpp  sutra_controller_generic.cpp  sutra_controller_generic_linear.cpp  sutra_controller_geo.cpp  sutra_controller_kalman.cpp  sutra_controller_ls.cpp  sutra_controller_mv.cpp  sutra_coronagraph.cpp  sutra_dm.cpp  sutra_gamora.cpp  sutra_groot.cpp  sutra_kl.cpp  sutra_lgs.cpp  sutra_perfectCoronagraph.cpp  sutra_phase.cpp  sutra_psfrecs.cpp  sutra_roket.cpp  sutra_rtc.cpp  sutra_rtc_brahma.cpp  sutra_rtc_brahmaListenerImpl.cpp  sutra_rtc_brama.cpp  sutra_rtc_bramaListenerImpl.cpp  sutra_rtc_cacao.cpp  sutra_sensors.cpp  sutra_source.cpp  (+19 more)
libsutra/src.cu/: sutra_acquisim.cu  sutra_ao_utils.cu  sutra_aotemplate.cu  sutra_centroider.cu  sutra_centroider_bpcog.cu  sutra_centroider_cog.cu  sutra_centroider_corr.cu  sutra_centroider_maskedPix.cu  sutra_centroider_pyr.cu  sutra_centroider_tcog.cu  sutra_centroider_utils.cuh  sutra_centroider_wcog.cu  sutra_controler.cu  sutra_dm.cu  (+16 more)
libyoga/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.in  yoga.doxyfile
naga/: CMakeLists.txt  Makefile  README  __init__.py  clean.py  setup.py  setup.py.bak  valgrind.sh
shesha/: CMakeLists.txt  LICENSE  Makefile  README  README.md  bbbb  clean.py  cleanDB.sh  get_config.py  par.pxi  report_E2E.md  setup.py  setup.py.bak
(+1638 files in other folders)
