[tool.poetry]
name = "compass-libs"
version = "5.5.0-0"
description = "this is the C++ libraries and python wrappers of the COMPASS platform designed to meet the need of high-performance for the simulation of AO systems"
authors = [
    "Florian Ferreira <florian.ferreira@obspm.fr>",
    "Damien Gratadour <damien.gratadour@obspm.fr>",
    "Arnaud Sevin <arnaud.sevin@obspm.fr>",
]
maintainers = [
    "Florian Ferreira <florian.ferreira@obspm.fr>",
    "Arnaud Sevin <arnaud.sevin@obspm.fr>",
]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ANR-COMPASS/shesha"
documentation = "https://shesha.readthedocs.io/en/master/"
packages = [
    { include = "CHANGELOG.md" },
    { include = "report_E2E.md" },
]

[tool.poetry.build]
generate-setup-file = false
script = 'compile.py'

[tool.ruff]
line-length = 100

# Enable Pyflakes `E` and `F` codes by default.
lint.select = ["E", "F"]

# ignore E501 Line too long
lint.ignore = ["E501"]

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".
